--- a/war/index.html
+++ b/war/index.html
@@ -7,19 +7,34 @@
 	<title>Rise Vision: Media Library</title>
 
 	<!-- Latest compiled and minified CSS -->
-	<link href="//s3.amazonaws.com/rise-common/styles/bootstrap/bootstrap.min.css" rel="stylesheet" type="text/css">
+<!-- 	<link href="//s3.amazonaws.com/rise-common/styles/bootstrap/bootstrap.min.css" rel="stylesheet" type="text/css"> -->
+	<link href="//s3.amazonaws.com/rise-common-test/styles/feature-v2/bootstrap/bootstrap.css" rel="stylesheet" type="text/css">
+	
 	<link href="//s3.amazonaws.com/rise-common/styles/bootstrap-switch/bootstrap-switch.min.css" rel="stylesheet" type="text/css">
 	<link href="//s3.amazonaws.com/rise-common/styles/glyphicons/glyphicons.css" rel="stylesheet" type="text/css">
 	<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet" type="text/css">
 	<link href="css/media-library.css" rel="stylesheet" type="text/css">
 
+	<!-- Copied form Store project (needed for the Header) -->
+	<script type="text/javascript" src="js/globals.js"></script>
+	<script type="text/javascript" src="js/utils.js"></script>
+
 	<script type="text/javascript" src="lib/angular/angular.js"></script>
-	<script type="text/javascript" src="js/app.js"></script>
-	<script type="text/javascript" src="js/controllers.js"></script>
-	<script type="text/javascript" src="js/filters.js"></script>
-	<script type="text/javascript" src="js/services.js"></script>
 	<script type="text/javascript" src="lib/angular/angular-resource.js"></script>
 	<script type="text/javascript" src="lib/angular/angular-route.js"></script>
+			
+	<script type="text/javascript" src="//s3.amazonaws.com/rise-common-test/scripts/feature-v2/rise/ctr-common.js"></script>
+
+	<script type="text/javascript" src="js/data/data-auth.js"></script>
+	<script type="text/javascript" src="js/data/data-cache.js"></script>
+	<script type="text/javascript" src="js/data/data-store.js"></script>
+	<script type="text/javascript" src="js/data/data-storage.js"></script>
+	
+	<script type="text/javascript" src="js/app.js"></script>
+	<script type="text/javascript" src="js/controllers.js"></script>
+	<script type="text/javascript" src="js/ctr-upload.js"></script>
+	<script type="text/javascript" src="js/filters.js"></script>
+	<script type="text/javascript" src="js/services.js"></script>
 
 	<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
 <!--	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script> -->
@@ -27,6 +42,9 @@
 <!--	<script type="text/javascript" src="lib/jquery.animate-colors-min.js"></script> -->
 
 	<script type="text/javascript" src="//rvaviewer-test.appspot.com/gadgets/gadgets.min.js"></script>
+	
+	<script type="text/javascript" src="//apis.google.com/js/client.js?onload=handleClientJSLoad"></script>
+	
 
 	<!-- <script type="text/javascript" src="lib/jquery.form.js"></script> -->
 
@@ -43,13 +61,8 @@
  	the close button. -->
  	<div class="widget-overlay"></div>
  	<div class="widget-wrapper container modal-content">
- 		<div class="modal-header">
- 			<h1>Media Library
- 				<button type="button" class="close" aria-hidden="true" ng-click="closeButtonClick()">
- 					<img src="//s3.amazonaws.com/rise-common/images/close.png" alt="Close">
- 				</button>
- 			</h1>
- 		</div>
+		<div ng-include="'//s3.amazonaws.com/rise-common-test/partials/header.html'" ng-controller="commonController"></div>
+ 	
 		<div class="alert alert-danger" ng-show="authenticationError">
 			You are not authorized to view this Company's files...
 		</div>
@@ -116,11 +129,13 @@
  				<div>Storage Used: {{librarySize | fileSizeFilter}} <!-- / Bandwidth Used: N/A --></div>
  			</div>
  		</div>
-		<div class="alert alert-info alert-dismissable" ng-controller="UploadInfoController" ng-show="uploadActive">
-			<button type="button" class="close" aria-hidden="true" ng-click="uploadInfoClose()">&times;</button>
-			Uploading {{uploadFileName}} ({{uploadFileSize | fileSizeFilter}})... 
-			<span ng-show="uploadComplete">Complete</span>
-			<span ng-show="uploadError">Error</span>
+  		<div class="row" ng-controller="UploadController">
+			<div class="alert alert-info alert-dismissable" ng-show="uploadActive">
+				<button type="button" class="close" aria-hidden="true" ng-click="uploadActive = false">&times;</button>
+				Uploading {{uploadFileName}} ({{uploadFileSize | fileSizeFilter}})... 
+				<span ng-show="uploadComplete">Complete</span>
+				<span ng-show="uploadError">Error</span>
+			</div>
 		</div>
 <!--
 			<div>
@@ -183,6 +198,7 @@
 	
 	<!-- Latest compiled and minified JavaScript -->
 <!--	<script type="text/javascript" src="//s3.amazonaws.com/rise-common/scripts/bootstrap/bootstrap.min.js"></script> -->
+	<script type="text/javascript" src="//s3.amazonaws.com/rise-common-test/scripts/feature-v2/bootstrap/bootstrap.min.js"></script>
 	<script type="text/javascript" src="//s3.amazonaws.com/rise-common/scripts/bootstrap-switch/bootstrap-switch.min.js"></script>
 	<!-- <script type="text/javascript" src="lib/media.js"></script> -->
 </body>
