--- a/war/index.html
+++ b/war/index.html
@@ -57,170 +57,13 @@
 
 <!-- <script type="text/javascript" src="./media.js"></script> -->
 </head>
-<body ng-controller="MainController">
-	<!-- Donna: To remove the pop-up style, remove the widget-overlay element,
- 	the widget-wrapper and modal-content classes from the container div, and
- 	the close button. -->
- 	<div class="widget-overlay"></div>
- 	<div class="widget-wrapper container modal-content">
-	 	<div class="modal-header">
-	 		<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
-				<i class="glyphicons remove"></i>
-			</button>
-			<h2 class="modal-title">
-				Storage
-			</h2>
-	 	
-<!-- 			<h1>Rise Storage -->
-<!-- 			<button type="button" class="close" aria-hidden="true" ng-click="closeButtonClick()"> -->
-<!-- 				<img src="//s3.amazonaws.com/rise-common/images/close.png" alt="Close"> -->
-<!-- 			</button> -->
-<!-- 			</h1> -->
-		</div>
+<body>
 
-<!-- 		<div ng-include="'//s3.amazonaws.com/rise-common-test/partials/header.html'" ng-controller="commonController"></div> -->
- 	
-		<div class="alert alert-danger" ng-show="authenticationError">
-			You are not authorized to view this Company's files...
-		</div>
-<!--  		<div class="checkbox"> -->
-<!--  			<label for="termsCheckbox"> -->
-<!--  				<input id="termsCheckbox" type="checkbox" disabled> -->
-<!--  				I acknowledge that there is currently no -->
-<!--  				charge for the use of the Media Library and that at an as of yet to -->
-<!--  				be determined date in the future, there will be a cost and at that -->
-<!--  				time I will have 30 days to decide if I wish to continue using this -->
-<!--  				Media Library or not. -->
-<!--  			</label> -->
-<!--  		</div> -->
+	<div ng-include="'//s3.amazonaws.com/rise-common-test/partials/header.html'" ng-controller="commonController"></div>
 
-		<div class="row">
-  			<div class="col-md-12">
-  				There is currently no charge for the use of the Media Library, however at an as of yet to be 
-				determined date in the future, there will be a cost and at that time you will have 30 days 
-				to decide if you wish to continue using this Media Library or not.
-			</div>
-		</div>
- 		<div class="row filter">
- 			<div class="col-xs-8 col-sm-9 col-md-10 search">
- 				<div class="input-group">
- 					<input type="text" class="form-control" placeholder="Search Media" ng-model="query">
- 					<span class="input-group-btn">
- 						<button class="btn btn-primary" type="button">
- 							<i class="fa fa-search"></i>
- 						</button>
- 					</span>
- 				</div>
- 			</div>
- 			<div class="col-xs-4 col-sm-3 col-md-2 text-right" ng-controller="ViewController">
- 				<input id="view-toggle" type="checkbox" data-text-label="<i class='fa fa-th-large'></i>" data-on-label="<i class='fa fa-th-list'></i>" data-off-label="<i class='fa fa-th-large'></i>" data-animated="false" data-on="primary" data-off="primary" checked>
- 			</div>
- 		</div>
- 		<div class="row commands">
- 			<div id="buttons-action" class="col-sm-7" ng-controller="ButtonsController">
- 				<ul class="actions">
-<!--
- 					<li>
- 						<button class="btn" type="button" title="Select" ng-click="$emit('FileSelectAction')" ng-disabled="selectDisabled || actionsDisabled">
- 							<i class="glyphicons ok"></i>
- 						</button>
- 					</li>
--->
- 					<li>
- 						<button class="btn" type="button" title="Upload" ng-click="uploadButtonClick()" ng-disabled="actionsDisabled">
- 							<i class="glyphicons cloud-upload"></i>
- 						</button>
- 					</li>
- 					<li>
- 						<button class="btn" type="button" title="Download" ng-disabled="downloadDisabled || actionsDisabled">
- 							<i class="glyphicons cloud-download"></i>
- 						</button>
- 					</li>
-<!--
- 					<li>
- 						<button class="btn" type="button" title="Link" disabled>
- 							<i class="glyphicons link"></i>
- 						</button>
- 					</li>
--->
- 					<li>
- 						<button class="btn" type="button" title="Delete" ng-click="$emit('FileDeleteAction')" ng-disabled="deleteDisabled || actionsDisabled">
- 							<i class="glyphicons bin"></i>
- 						</button>
- 					</li>
- 				</ul>
- 			</div>
- 			<div class="col-sm-5 storage">
- 				<div>Storage Used: {{librarySize | fileSizeFilter}} <!-- / Bandwidth Used: N/A --></div>
- 			</div>
- 		</div>
-  		<div class="row" ng-controller="UploadController">
-			<div class="alert alert-info alert-dismissable" ng-show="uploadActive">
-				<button type="button" class="close" aria-hidden="true" ng-click="uploadActive = false">&times;</button>
-				Uploading {{uploadFileName}} ({{uploadFileSize | fileSizeFilter}})... 
-				<span ng-show="uploadComplete">Complete</span>
-				<span ng-show="uploadError">Error</span>
-			</div>
-		</div>
-<!--
-			<div>
-				<div class="progress progress-striped active" ng-controller="ProgressController">
-  				<div class="progress-bar"  role="progressbar" aria-valuenow="{{uploadProgress}}" aria-valuemin="0" aria-valuemax="100" style="width: {{uploadProgress}}%">
-    				<span class="sr-only">{{uploadProgress}}% Complete</span>
-  				</div>
-				</div>
-			</div>
-		-->
-		<!--Body content-->
-		<div ng-view></div>
+ 	<div class="container" ng-view>
 	</div>
 
-	<!-- Donna: This doesn't look like it's being used so I didn't style it. -->
-	<!-- Modal -->
-	<div id="uploaddialog" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" ng-controller="UploadController">
-		<div class="modal-dialog">
-			<div class="modal-content">
-				<form id="uploadform" target="uploadcompleteframe" action="" enctype="multipart/form-data" method="post">
-					<input type="hidden" name="key" ng-value="uploadFileName">
-					<input type="hidden" name="success_action_redirect" ng-value="responseUrl">
-					<input type="hidden" name="acl" value="public-read">
-					<input type="hidden" name="content-type" ng-value="contentType">
-					<input type="hidden" name="cache-control" value="public, max-age=60">
-					<input type="hidden" name="GoogleAccessId" ng-value="googleAccessId">
-					<input type="hidden" name="policy" ng-value="policyBase64">
-					<input type="hidden" name="signature" ng-value="signature">
-					<!-- <input type="hidden" name="file" ng-value="fileContent"> -->
-					<input type="file" name="file" id="file" multiple="multiple" onchange="angular.element(this).scope().filesSelected(this)"/>
-				</form>
-				<iframe id="uploadcompleteframe" style="position:absolute;left:0px;top:0px;width:0px;height:0px;visibility:hidden;"></iframe>
-				<div class="modal-header">
-<!--					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
-	<img src="./images/close-btn-black.png" alt="close button" class="cancel-and-close"></button> -->
-					<h2 class="modal-title" id="myModalLabel">
-					Upload Files</h4>
-				</div>
-				<div class="modal-body shopping-cart-modal-body">
-		<!--					<input type="file" name="selectedFile" id="selectedFile" multiple="multiple" onchange="angular.element(this).scope().loadFiles(this)"/> -->
-<!--	
-					<form action="##" class="dropzone" id="my-awesome-dropzone">
-					  <div class="fallback">
-					    <input name="file" type="file" multiple />
-						</div>
-					</form>
-				-->
-				</div>
-				<div class="modal-footer">
-<!--					<button class="btn btn-primary" type="button" ng-click="uploadFiles()" ng-disabled="fileCount > 0">
-						Upload <i class='fa fa-check-circle'></i>
-					</button> -->
-					<button type="button" class="btn btn-primary" data-dismiss="modal">
-						Done
-					</button>
-				</div>
-			</div>
-		</div>
-	</div>
-	
 	<!-- Latest compiled and minified JavaScript -->
 <!--	<script type="text/javascript" src="//s3.amazonaws.com/rise-common/scripts/bootstrap/bootstrap.min.js"></script> -->
 	<script type="text/javascript" src="//s3.amazonaws.com/rise-common-test/scripts/feature-v2/bootstrap/bootstrap.min.js"></script>
