--- a/war/index.html
+++ b/war/index.html
@@ -11,8 +11,9 @@
 	<!-- Latest compiled and minified CSS -->
 <!-- 	<link href="//s3.amazonaws.com/rise-common/styles/bootstrap/bootstrap.min.css" rel="stylesheet" type="text/css"> -->
 	<link href="//s3.amazonaws.com/rise-common-test/styles/feature-v2/bootstrap/bootstrap.css" rel="stylesheet" type="text/css">
-	
+	<link href="//s3.amazonaws.com/rise-common/styles/bootstrap-select/bootstrap-select.min.css" rel="stylesheet" type="text/css">
 	<link href="//s3.amazonaws.com/rise-common/styles/bootstrap-switch/bootstrap-switch.min.css" rel="stylesheet" type="text/css">
+	
 <!-- 	<link href="//s3.amazonaws.com/rise-common/styles/glyphicons/glyphicons.css" rel="stylesheet" type="text/css"> -->
 	<link href="//s3.amazonaws.com/rise-common-test/styles/feature-v2/glyphicons/glyphicons.css" rel="stylesheet" type="text/css">
 	<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet" type="text/css">
@@ -69,6 +70,7 @@
 	<!-- Latest compiled and minified JavaScript -->
 <!--	<script type="text/javascript" src="//s3.amazonaws.com/rise-common/scripts/bootstrap/bootstrap.min.js"></script> -->
 	<script type="text/javascript" src="//s3.amazonaws.com/rise-common-test/scripts/feature-v2/bootstrap/bootstrap.min.js"></script>
+	<script type="text/javascript" src="//s3.amazonaws.com/rise-common/scripts/bootstrap-select/bootstrap-select.min.js"></script>
 	<script type="text/javascript" src="//s3.amazonaws.com/rise-common/scripts/bootstrap-switch/bootstrap-switch.min.js"></script>
 	<!-- <script type="text/javascript" src="lib/media.js"></script> -->
 </body>
